# neurogenesis_napari

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
.napari-hub/: DESCRIPTION.md  config.yml
src/neurogenesis_napari/: __init__.py  napari.yaml
src/neurogenesis_napari/_utils/: __init__.py  geometry.py  image.py  logging_to_napari.py  model_hub.py
src/neurogenesis_napari/classification/representation_based/: vae.py
src/neurogenesis_napari/preprocessing/: cellpose_denoising.py  colour_normalization.py
src/neurogenesis_napari/segmentation/: cs.py  dapi_cellpose.py
src/neurogenesis_napari/segmentation/cellpose_utils/: __init__.py  __main__.py  cli.py  core.py  denoise.py  dynamics.py  export.py  io.py  metrics.py  models.py  plot.py  resnet_torch.py  segformer.py  test_mkl.py  train.py  transforms.py  utils.py  version.py
src/neurogenesis_napari/widgets/: __init__.py  _edit_prediction.py  normalize_and_denoise.py  segment.py  segment_and_classify.py
tests/: conftest.py  test_utils.py  test_widget.py
